--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   api:
     build: 
       context: .
-      dockerfile: Dockerfile.local
+      dockerfile: Dockerfile.dev
     ports:
       - "3000:3000"
     volumes:
