--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "src/server.js",
   "scripts": {
     "dev": "./scripts/dev.sh",
-    "prod": ""
+    "prod": "./scripts/prod.sh"
   },
   "dependencies": {
     "express": "^4.18.1",
