--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "main": "src/server.js",
   "scripts": {
-    "dev": "./scripts/dev.sh",
-    "prod": "./scripts/prod.sh"
+    "dev": "nodemon ./src/server.js",
+    "prod": "node ./src/server.js"
   },
   "dependencies": {
     "express": "^4.18.1",
