--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -2,11 +2,7 @@
 FROM node:18-alpine3.16
 
 # Set Env Vars
-ENV DB_HOST=mysql
-ENV DB_USER=root
-ENV DB_PASSWORD=1234
-ENV DB_NAME=budgetapp
-ENV DB_PORT=3306
+ENV MYSQL_URL=mysql://root:1234@mysql:3306/budgetapp
 
 # Install npm and nodemon
 RUN npm install -g npm
